# butler

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  TEMPLATE_USAGE.md  docker-compose.dev.yml  docker-compose.yml  generate_project.py  pyproject.toml  template_config.json
.claude/: settings.local.json
nginx/: nginx.conf
scripts/: dev.sh  init-db.sql  start.sh
src/butler/: cli.py  main.py
src/butler/api/: routes.py
src/butler/api/endpoints/: ai.py  auth.py  health.py
src/butler/core/: config.py  logging.py
src/butler/services/: ai_service.py
tests/: conftest.py
tests/integration/: test_full_flow.py
tests/unit/: test_ai.py  test_auth.py  test_health.py
